Fix y ahora ya funciona bien
Para probarlo si estais en dev, tendreis que Cerrar Sesion, Registraros (para que os de el token), suscribiros a algun canal y ya podreis ver bien Suscripciones y Perfil.
Puedes tanto suscribirte como desuscribirte.